@@ -1,12 +1,15 @@
 package hu.unideb.inf.carinspection;
 
 import hu.unideb.inf.carinspection.domain.AppUser;
+import hu.unideb.inf.carinspection.domain.Group;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class DefaultUserDetails implements UserDetails {
 
@@ -19,7 +22,7 @@ public class DefaultUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(appUser.getGroup().getGroupName()));
     }
 
     @Override
